fix header icon positioning on small screens

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -48,6 +48,12 @@
       float: none;
       display: block;
       top: auto;
+      margin-top: 5px;
+
+      svg {
+        width: 48;
+        height: 48;
+      }
     }
   }
 }
